--- a/project.css
+++ b/project.css
@@ -2,57 +2,71 @@
     --color1: #FFE6E6;
     --color2: #E1AFD1;
     --color3: #AD88C6;
-    --color4: #7469B6;
-    --padding-x: 8rem;
+    --color4: #462fcc;
+    --padding-x: 6rem;
     --padding-y: 0.2rem;
 }
-*{
+
+#navbar {
+    box-shadow: 0 0 0.5 0.9 var(--color4);
+}
+
+* {
     margin: 0;
     padding: 0;
     font-family: sans-serif;
 }
-.navbar-main{
+
+.navbar-main {
     background-color: var(--color3);
     display: flex;
     justify-content: space-between;
     padding: var(--padding-y) var(--padding-x);
 }
-.navbar-logo{
+
+.navbar-logo {
     font-size: 1rem;
     display: flex;
     align-items: center;
-    
+
 }
-.navbar-logo-icon{
+
+.navbar-logo-icon {
     padding: 0.7rem;
     color: black;
-   
+
     opacity: 19px;
 }
-.navbar-logo-icon:hover{
+
+.navbar-logo-icon:hover {
     background-color: var(--color2);
 }
-.navbar-logo-text{
+
+.navbar-logo-text {
     font-weight: bold;
     font-size: 2rem;
     text-transform: uppercase;
     color: var(--color4);
-    
+
 }
-.navbar-logo-text:hover{
+
+.navbar-logo-text:hover {
     color: var(--color1);
 }
-.navbar-menu{
+
+.navbar-menu {
     list-style: none;
     display: flex;
     justify-content: space-between;
     align-items: center;
     gap: 1.7rem;
 }
-.navbar-item{
+
+.navbar-item {
     font-weight: bold;
 }
-.navbar-link{
+
+.navbar-link {
     text-decoration: none;
     position: relative;
     transition: all 0.4s ease;
@@ -60,7 +74,8 @@
 
 
 }
-.navbar-link::before{
+
+.navbar-link::before {
     content: "";
     position: absolute;
     left: 0;
@@ -71,34 +86,38 @@
     z-index: -1;
     transition: all 5s ease;
     border-radius: 14px;
-   
+
 }
-.navbar-link:hover{
+
+.navbar-link:hover {
     background-color: var(--color4);
     color: var(--color1);
 }
-.navbar-link:hover::before{
+
+.navbar-link:hover::before {
     /* width: 100%; */
     height: 100%;
 }
-.navbar-cta{
-   border: none;
+
+.navbar-cta {
+    border: none;
     outline: none;
     width: 200px;
     height: 50px;
     border-radius: 14px;
-    background-color: var(--color2 );
+    background-color: var(--color2);
     border: 2px solid var(--color4);
     position: relative;
     font-weight: bold;
     transition: all 0.4s ease;
     z-index: 1;
 }
-.navbar-cta::before{
+
+.navbar-cta::before {
     content: "";
     width: 52px;
     height: 0px;
-   transition: all 0.4s ease;
+    transition: all 0.4s ease;
     position: absolute;
     background-color: var(--color4);
     left: 0;
@@ -107,45 +126,48 @@
     border-radius: 11px;
     overflow: hidden;
 }
-.navbar-cta:hover{
-   color: var(--color1);
+
+.navbar-cta:hover {
+    color: var(--color1);
 
 }
-.navbar-cta:hover::before{
+
+.navbar-cta:hover::before {
     width: 100%;
     height: 100%;
 }
-.heros-background{
-    background:linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.5)), url("./media/background.jpg");
+
+.heros-background {
+    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5)), url("./media/background.jpg");
     max-height: 80vh !important;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    padding: 0  calc( 5rem + var(--padding-x) );
+    padding: 0 calc(5rem + var(--padding-x));
     display: grid;
     grid-template-columns: 1.2fr 0.8fr;
-    grid-template-rows: repeat(1,1fr);
+    grid-template-rows: repeat(1, 1fr);
     overflow: hidden;
 }
 
-.heros-img{
+.heros-img {
     position: relative;
     display: flex;
     justify-content: end;
     align-items: end;
     height: 90vh;
-   background: transparent;
+    background: transparent;
 }
 
-.heros-img img{
+.heros-img img {
     width: 90% !important;
     height: 100% !important;
     position: absolute;
     bottom: 0;
-    right: 0; 
+    right: 0;
 }
 
-.heros-text h3{
+.heros-text h3 {
     color: var(--color1);
     opacity: 0.5;
     background-color: #7743DB;
@@ -153,35 +175,34 @@
     padding: 1rem;
 }
 
-.heros-text h1{
+.heros-text h2 {
     color: var(--color2);
     font-size: 4rem;
 }
 
-.heros-text p{
+.heros-text p {
     color: black;
     /* opacity: 0.5; */
     padding: 1rem;
     background-color: var(--color3);
 }
 
-.heros-text h4{
+.heros-text h4 {
     color: var(--color1);
     /* opacity: 0.5; */
 }
 
 /* .heros-cta-container{
+}*/
 
-} */
-
-.heros-text{
+.heros-text {
     display: flex;
     flex-direction: column;
     justify-content: center;
     gap: 0.5rem;
 }
 
-.heros-cta{
+.heros-cta {
     border: 0;
     outline: 0;
     padding: 0.65rem 1rem;
@@ -191,8 +212,8 @@
     color: var(--color1);
 }
 
-.heros-cta-2{
-    background-color:rgba(173, 162, 146, 0.6);
+.heros-cta-2 {
+    background-color: rgba(173, 162, 146, 0.6);
     border: 2px solid var(--color1);
     color: var(--color4);
     position: relative;
@@ -200,7 +221,7 @@
     overflow: hidden;
 }
 
-.heros-cta-2::before{
+.heros-cta-2::before {
     content: "";
     position: absolute;
     width: 100%;
@@ -211,10 +232,251 @@
     z-index: -1;
     transition: all 0.5s ease;
 }
-.heros-cta-2:hover{
+
+.heros-cta-2:hover {
     color: var(--color1);
 }
 
-.heros-cta-2:hover::before{
+.heros-cta-2:hover::before {
     height: 100%;
+}
+
+.about-us-container {
+    display: grid;
+    grid-template-columns: 1.2fr 0.8fr;
+    grid-template-rows: 1fr;
+    gap: 1px;
+
+}
+
+.about-us-text h1{
+    color: var(--color4);
+    font-weight: bolder;
+    font-size: 2rem;
+    /* padding: 1rem; */
+    
+}
+
+.about-us-text {
+    padding: calc(4rem + var(--padding-y))  var(--padding-x);
+    flex-direction: column;
+}
+.d1{
+    padding: 10px;
+}
+.about-us-text-2 {
+    padding: calc(4rem + var(--padding-y)) calc(1rem + var(--padding-x));
+    flex-direction: column;
+}
+.about-us-text-2 h1{
+        color: var(--color3);
+}
+
+/* .about-img-container .image{
+    width: 30px;
+    height: 20px;
+} */
+.about-us-text-2 .about-img-container .about-img{
+    background-color: rgba(116, 105, 182 ,0.5);
+    padding:10px;
+    position: absolute;
+    bottom: 150px;
+    top: 50%;
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align:center;
+    transition: all 0.6s ease;
+}
+.about-img-container:hover .about-img{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 50%;
+    text-align:center;
+   
+}
+.icon{
+    padding: 1rem;
+    font-size: 2rem;
+    font-weight: bolder;
+    color: var(--color4);
+}
+.information-deep{
+    padding: calc(4rem + var(--padding-y))  var(--padding-x);
+    font-size: 1.7rem;
+    color: var(--color4);
+}
+.box{
+    display: grid;
+    grid-template-columns: 1 1fr;
+    grid-template-rows: 1 1fr;
+    grid-row-start: 1;
+    grid-row-end: 1;
+    grid-column-start: 3;
+    grid-column-end: 5;
+}
+.information-box-1{
+    margin: 10px;
+    border: 2px solid rgba(0, 0, 0 ,0.3);
+    border-radius: 10px;
+    width: 300px;
+    height: 400px;
+    /* color: var(--color4); */
+    position: relative;
+    left: 10%;
+    z-index: 1;
+    overflow: hidden;
+   
+}
+.information-box-1:hover{
+    background-color: var(--color4);
+    color: var(--color2);
+}
+.information-box-1::before{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 0;
+    top: 0;
+    bottom: 0;
+    background-color: var(--color4);
+    z-index: -1;
+    transition: all 0.5s ease;
+}
+.information-box-1:hover::before{
+   height: 100%;
+}
+.information-box-1 .s1{
+    display: flex;  
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    top: 90px;
+    color: var(--color4) !important;
+}
+.information-box-1 h2{
+    position: absolute;
+    top: 57%;
+    text-align: center;
+    left: 60px;
+    color: var(--color4);
+}
+h2:hover {
+    color: var(--color2);
+}
+.information-box-1 p{
+    position: absolute;
+    top: 70%;
+    text-align: center;
+}
+.information-box-2{
+    margin: 10px;
+    border: 2px solid rgba(0, 0, 0 ,0.3);
+    border-radius: 10px;
+    width: 300px;
+    height: 400px;
+    /* color: var(--color4); */
+    position: absolute;
+    left: 40%;
+    top: 202%;
+    z-index: 1;
+    overflow: hidden;
+ 
+}
+.information-box-2:hover{
+    background-color: var(--color4);
+    color: var(--color2);
+}
+.information-box-2::before{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 0;
+    top: 0;
+    bottom: 0;
+    background-color: var(--color4);
+    z-index: -1;
+    transition: all 0.5s ease;
+}
+.information-box-2:hover::before{
+   height: 100%;
+}
+.information-box-2 .s2{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    top: 90px;
+    color: var(--color4) !important;
+}
+.information-box-2 h2{
+    position: absolute;
+    top: 57%;
+    text-align: center;
+    left: 60px;
+    color: var(--color4);
+}
+h2:hover{
+    color: var(--color2);
+}
+.information-box-2 p{
+    position: absolute;
+    top: 70%;
+    text-align: center;
+}
+.information-box-3{
+    margin: 10px;
+    border: 2px solid rgba(0, 0, 0 ,0.3);
+    width: 300px;
+    height: 400px;
+    border-radius: 10px;
+    position: absolute;
+    left: 70%;
+    top: 202%;
+}
+.information-box-3:hover{
+    background-color: var(--color4);
+    color: var(--color2);
+}
+.information-box-3::before{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 0;
+    top: 0;
+    bottom: 0;
+    background-color: var(--color4);
+    z-index: -1;
+    transition: all 0.5s ease;
+}
+.information-box-3:hover::before{
+   height: 100%;
+}
+.information-box-3 .s3{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    top: 90px;
+    color: var(--color4) !important;
+}
+.information-box-3 h2{
+    position: absolute;
+    top: 57%;
+    text-align: center;
+    left: 60px;
+    color: var(--color4);
+}
+h2:hover{
+    color: var(--color2);
+}
+.information-box-3 p{
+    position: absolute;
+    top: 70%;
+    text-align: center;
 }
