--- a/project.css
+++ b/project.css
@@ -138,7 +138,7 @@
 }
 
 .heros-background {
-    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5)), url("./media/background.jpg");
+    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5));
     max-height: 80vh !important;
     background-position: center;
     background-size: cover;
@@ -165,6 +165,7 @@
     position: absolute;
     bottom: 0;
     right: 0;
+    
 }
 
 .heros-text h3 {
@@ -249,36 +250,39 @@
 
 }
 
-.about-us-text h1{
+.about-us-text h1 {
     color: var(--color4);
     font-weight: bolder;
-    font-size: 2rem;
+    font-size: 3rem;
     /* padding: 1rem; */
-    
+
 }
 
 .about-us-text {
-    padding: calc(4rem + var(--padding-y))  var(--padding-x);
+    padding: calc(4rem + var(--padding-y)) var(--padding-x);
     flex-direction: column;
 }
-.d1{
+
+.d1 {
     padding: 10px;
 }
+
 .about-us-text-2 {
-    padding: calc(4rem + var(--padding-y)) calc(1rem + var(--padding-x));
+    padding: calc(1rem + var(--padding-y)) calc(1rem + var(--padding-x));
     flex-direction: column;
 }
-.about-us-text-2 h1{
-        color: var(--color3);
+
+.about-us-text-2 h1 {
+    color: var(--color3);
 }
 
 /* .about-img-container .image{
     width: 30px;
     height: 20px;
 } */
-.about-us-text-2 .about-img-container .about-img{
-    background-color: rgba(116, 105, 182 ,0.5);
-    padding:10px;
+.about-us-text-2 .about-img-container .about-img {
+    background-color: rgba(93, 76, 189, 0.5);
+    padding: 10px;
     position: absolute;
     bottom: 150px;
     top: 50%;
@@ -286,197 +290,282 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    text-align:center;
+    text-align: center;
     transition: all 0.6s ease;
+    overflow: hidden;
 }
-.about-img-container:hover .about-img{
+
+.about-img-container:hover .about-img {
     position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 50%;
-    text-align:center;
-   
+    height: 20%;
+    text-align: center;
+    overflow: hidden;
 }
-.icon{
+
+.icon {
     padding: 1rem;
     font-size: 2rem;
     font-weight: bolder;
     color: var(--color4);
 }
-.information-deep{
-    padding: calc(4rem + var(--padding-y))  var(--padding-x);
-    font-size: 1.7rem;
-    color: var(--color4);
+
+.information-deep {
+    padding: calc(4rem + var(--padding-y)) calc(3rem + var(--padding-x));
+
 }
-.box{
+
+.information-deep>h1 {
+    padding: 2rem 0;
+    font-size: 3rem;
+    color: var(--color4);
+    
+    
+}
+
+.box {
     display: grid;
-    grid-template-columns: 1 1fr;
-    grid-template-rows: 1 1fr;
-    grid-row-start: 1;
-    grid-row-end: 1;
-    grid-column-start: 3;
-    grid-column-end: 5;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2rem;
+
 }
-.information-box-1{
-    margin: 10px;
-    border: 2px solid rgba(0, 0, 0 ,0.3);
-    border-radius: 10px;
-    width: 300px;
+
+.information-box {
+    width: 200px;
     height: 400px;
-    /* color: var(--color4); */
-    position: relative;
-    left: 10%;
-    z-index: 1;
-    overflow: hidden;
-   
-}
-.information-box-1:hover{
-    background-color: var(--color4);
-    color: var(--color2);
-}
-.information-box-1::before{
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 0;
-    top: 0;
-    bottom: 0;
-    background-color: var(--color4);
-    z-index: -1;
-    transition: all 0.5s ease;
-}
-.information-box-1:hover::before{
-   height: 100%;
-}
-.information-box-1 .s1{
-    display: flex;  
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    top: 90px;
-    color: var(--color4) !important;
-}
-.information-box-1 h2{
-    position: absolute;
-    top: 57%;
-    text-align: center;
-    left: 60px;
-    color: var(--color4);
-}
-h2:hover {
-    color: var(--color2);
-}
-.information-box-1 p{
-    position: absolute;
-    top: 70%;
-    text-align: center;
-}
-.information-box-2{
-    margin: 10px;
-    border: 2px solid rgba(0, 0, 0 ,0.3);
-    border-radius: 10px;
-    width: 300px;
-    height: 400px;
-    /* color: var(--color4); */
-    position: absolute;
-    left: 40%;
-    top: 202%;
-    z-index: 1;
-    overflow: hidden;
- 
-}
-.information-box-2:hover{
-    background-color: var(--color4);
-    color: var(--color2);
-}
-.information-box-2::before{
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 0;
-    top: 0;
-    bottom: 0;
-    background-color: var(--color4);
-    z-index: -1;
-    transition: all 0.5s ease;
-}
-.information-box-2:hover::before{
-   height: 100%;
-}
-.information-box-2 .s2{
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
+    padding: var(--padding-y) var(--padding-x);
+    box-shadow: 0 0 4px -2px black;
+    border-radius: 14px;
     position: relative;
-    top: 90px;
-    color: var(--color4) !important;
+    z-index: 1;
+    overflow: hidden;
+
 }
-.information-box-2 h2{
+
+.information-box::before {
+    content: "";
+    width: 100%;
+    height: 0;
+    background-color: var(--color3);
+    
     position: absolute;
-    top: 57%;
+    left: 0;
+    top: 0;
+    z-index: -1;
+    transition: all 0.5s ease;
+}
+
+
+.information-box:hover::before {
+    height: 100%;
+}
+.information-box:hover{
+    color: var(--color1);
+}
+.s1-icon img {
+    width: 80px;
+}
+
+.s1-icon {
+    position: relative;
+    height: 100px;
+    width: 100%;
+    margin-bottom: 1rem;
+}
+
+.s1-circle {
+    width: 150px;
+    height: 150px;
+    background-color: rgba(119, 67, 219, 0.2);
+    border-radius: 100%;
+    position: absolute;
+    top: 80%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.s1-icon img {
+    position: absolute;
+    top: 85%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+}
+
+.box .s1-title {
+    position: absolute;
+    top: 40%;
+    font-size: 2rem;
+    margin-bottom: 2rem;
+}
+
+.box .s1-text {
     text-align: center;
-    left: 60px;
+    font-weight: 500;
+    color: rgba(0, 0, 0, 0.7);
+    position: absolute;
+    top: 65%;
+   word-spacing: 6px;
+   padding: 0 1rem 0 3rem;
+}
+
+
+
+.project-grid {
+    padding: calc(1rem + var(--padding-y)) var(--padding-x);
+
+}
+
+.grid-project>h1 {
     color: var(--color4);
+    padding: calc(4rem + var(--padding-y)) var(--padding-x);
+    font-size: 2rem;
 }
-h2:hover{
-    color: var(--color2);
+
+.project-grid {
+    display: grid;
+    height: 10%;
+    object-fit: cover;
+    gap: 1px;
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(3, 1fr);
 }
-.information-box-2 p{
-    position: absolute;
-    top: 70%;
-    text-align: center;
+
+.grid-project>img {
+    width: 100%;
+    object-fit: cover;
 }
-.information-box-3{
-    margin: 10px;
-    border: 2px solid rgba(0, 0, 0 ,0.3);
-    width: 300px;
-    height: 400px;
-    border-radius: 10px;
+
+.grid-project-child-1 {
+    grid-row: 1 / 3;
+    grid-column: 1 / 3;
+}
+
+.grid-project-child {
+    overflow: hidden;
+}
+.contact-form{
+    width: 89%;
+    height: 150px;
+    padding:calc(4rem + var( --padding-y))   var(--padding-x);
+    background-color: var(--color1);
+    display: grid;
+    grid-template-columns: repeat(2 , 1fr);
+    
+}
+.contact-form-title{
+    
+    font-size: 2rem;
+}
+.contact-form-cta{
     position: absolute;
     left: 70%;
-    top: 202%;
+    top: 485%;
+    width: 35%;
+    height: 25%;
 }
-.information-box-3:hover{
+.button{
+    width: 25%;
+    height: 25%;
     background-color: var(--color4);
-    color: var(--color2);
-}
-.information-box-3::before{
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 0;
-    top: 0;
-    bottom: 0;
-    background-color: var(--color4);
-    z-index: -1;
-    transition: all 0.5s ease;
-}
-.information-box-3:hover::before{
-   height: 100%;
-}
-.information-box-3 .s3{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    border-radius: 10px;
+    border: none;
     position: relative;
-    top: 90px;
-    color: var(--color4) !important;
+    z-index: 1;
+    right: 0;
+    top: 0;
+    font-size: 1rem;
 }
-.information-box-3 h2{
+.button::before{
+    content: "";
+    width: 0;
+    height: 100%;
+    background-color: var(--color3);
     position: absolute;
-    top: 57%;
-    text-align: center;
-    left: 60px;
+    left: 0;
+    top: 0;
+    z-index: -1;
+    transition: all 0.4s ease;
+    border-radius: 10px;
+    overflow: hidden;
+}
+.button:hover::before{
+    width: 100%;
+}
+
+.p-i-box{
+    padding: calc(4rem + var(--padding-y))  var(--padding-x);
+}
+.p-i-box > h1{
+    padding: 2rem 0;
+    font-size: 2.9rem;
     color: var(--color4);
+
 }
-h2:hover{
-    color: var(--color2);
+.p-i-container{
+    display: grid;
+    grid-template-columns: repeat(3 ,1fr);
+    gap: 2rem;
+   
 }
-.information-box-3 p{
+.p-i-child{
+    width: 200px;
+    height: 200px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: calc(4rem + var(--padding-y)) var(--padding-x);
+    box-shadow: 0 0 4px -1px black;
+}
+.p-i-child-icon{
+    position: relative;
+    height: 5px;
+    width: 100%;
+    
+}
+.p-i-child-icon > img{
+    width: 100px;
+    height: 60px;
+    object-fit: cover;
+    
+}
+.p-i-circle{
+    width: 150px;
+    height: 150px;
+    background-color:  rgba(119, 67, 219, 0.2);
+    border-radius: 100%;
     position: absolute;
-    top: 70%;
-    text-align: center;
+    top: 560%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
+.p-i-title{
+    position: absolute;
+    top: 573%;
+    font-size: 2rem;
+    margin-bottom: 2rem;
+}
+.p-i-child-icon > img{
+    position: absolute;
+    top: 560%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+}
+/* .p-i-text{
+    
+    text-align: center;
+    font-weight: 500;
+    color: rgba(0, 0, 0, 0.7);
+    position: absolute;
+    top: 585%;
+    left: 10%;
+   padding: 0 2rem 0 1rem;
+} */
